--- a/brands.html
+++ b/brands.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230901103131">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230903135744">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -192,7 +192,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="brands__block content__block">
+                        <!-- <div class="brands__block content__block">
                             <div class="brands__popular popular">
                                 <h2 class="popular__title">Popular</h2>
                                 <ul class="popular__list">
@@ -342,7 +342,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -396,7 +396,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230901103131"></script>
+    <script src="js/app.min.js?_v=20230903135744"></script>
 </body>
 
 </html>
