--- a/pages.html
+++ b/pages.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230901103131">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230903135744">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -26,6 +26,8 @@
     <h1>Pages:</h1>
 
     <a href="index.html">Main</a>
+    <a href="looks.html">Looks</a>
+    <a href="look.html">One look</a>
     <a href="brands.html">Brands</a>
     <a href="blog.html">Blog</a>
     <a href="article.html">Article</a>
