--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230901103131">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230903135744">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -41,6 +41,7 @@
                         </picture>
                     </div>
                     <form action="#" class="contact__form">
+                        <h1 class="contact__form-title title1">Please feel free to contact us</h1>
                         <p class="contact__desc">
                             Thank you for visiting DressHub! We’d love to hear from you. Please fill out the form below,
                             and a member of our team will get back to you as soon as possible.
@@ -107,7 +108,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230901103131"></script>
+    <script src="js/app.min.js?_v=20230903135744"></script>
 </body>
 
 </html>
