--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230904133835">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230905123051">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -26,6 +26,7 @@
     <h1>Pages:</h1>
 
     <a href="index.html">Main</a>
+    <a href="product.html">Product</a>
     <a href="looks.html">Looks</a>
     <a href="look.html">One look</a>
     <a href="brands.html">Brands</a>
