--- a/brands.html
+++ b/brands.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230905154658">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230906114904">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -29,7 +29,7 @@
         </div>
 
         <div class="brands">
-            <div class="brands__container container">
+            <div class="brands__container2 container2">
                 <div class="brands__body">
                     <aside class="brands__sidebar sidebar">
                         <div class="sidebar__block">
@@ -192,157 +192,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- <div class="brands__block content__block">
-                            <div class="brands__popular popular">
-                                <h2 class="popular__title">Popular</h2>
-                                <ul class="popular__list">
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Leather jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Denim jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Bomber jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Puffer jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Windbreaker jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Hooded jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Fleece jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Quilted jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Wool jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Down jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Track jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Parka jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Leather jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Denim jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Bomber jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Puffer jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Windbreaker jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Hooded jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Fleece jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Quilted jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Wool jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Down jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Track jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Parka jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Leather jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Denim jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Bomber jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Puffer jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Windbreaker jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Hooded jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Fleece jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Quilted jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Wool jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Down jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Track jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Parka jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Leather jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Denim jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Bomber jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Puffer jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Windbreaker jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Hooded jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Fleece jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Quilted jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Wool jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Down jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Track jackets</a>
-                                    </li>
-                                    <li class="popular__item">
-                                        <a href="#" class="popular__link">Parka jackets</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -396,7 +245,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230905154658"></script>
+    <script src="js/app.min.js?_v=20230906114904"></script>
 </body>
 
 </html>
