--- a/brands.html
+++ b/brands.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906114904">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230906122925">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -20,7 +20,7 @@
 </header>
 
         <div class="breadcrumbs">
-            <div class="breadcrumbs__container container">
+            <div class="breadcrumbs__container2 container2">
                 <div class="breadcrumbs__body">
                     <a href="#" class="breadcrumbs__link">Home</a>
                     <a href="#" class="breadcrumbs__link">Brands</a>
@@ -245,7 +245,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230906114904"></script>
+    <script src="js/app.min.js?_v=20230906122925"></script>
 </body>
 
 </html>
