--- a/error.html
+++ b/error.html
@@ -57,44 +57,22 @@
     </div>
 </header>
 
-        <div class="breadcrumbs">
-            <div class="breadcrumbs__container container">
-                <div class="breadcrumbs__body">
-                    <a href="#" class="breadcrumbs__link">Home</a>
-                    <a href="#" class="breadcrumbs__link">Contact</a>
+        <div class="error-page">
+            <div class="error-page__body">
+                <div class="error-page__image">
+                    <picture>
+                        <source data-srcset="img/error-page/image.gif" srcset="img/plug.png" type="image/webp">
+                        <img data-src="img/error-page/image.gif" src="img/plug.png" alt="Image">
+                    </picture>
                 </div>
-            </div>
-        </div>
-
-        <div class="contact">
-            <div class="contact__container container">
-                <div class="contact__header">
-                    <h1 class="contact__title title1">Contact</h1>
-                </div>
-                <div class="contact__body">
-                    <div class="contact__bg">
-                        <picture>
-                            <source data-srcset="img/contacts/bg.webp" srcset="img/plug.png" type="image/webp">
-                            <img data-src="img/contacts/bg.jpg" src="img/plug.png" alt="Image">
-                        </picture>
-                    </div>
-                    <form action="#" class="contact__form">
-                        <h1 class="contact__form-title title1">Please feel free to contact us</h1>
-                        <p class="contact__desc">
-                            Thank you for visiting DressHub! We’d love to hear from you. Please fill out the form below,
-                            and a member of our team will get back to you as soon as possible.
-                        </p>
-                        <input type="text" placeholder="Name" name="name">
-                        <input type="text" placeholder="E-mail" name="email">
-                        <input type="text" placeholder="Title" name="title">
-                        <textarea placeholder="Message" name="message"></textarea>
-                        <button class="contact__btn btn-gradient" type="submit">Submit</button>
-                        <div class="contact__footer">
-                            <span>Or just email us</span>
-                            <a href="mailto:contact@dresshub.com" class="contact__link">contact@dresshub.com</a>
-                        </div>
-                    </form>
-                </div>
+                <h1 class="error-page__title title3">Ooops! Page not found</h1>
+                <p class="error-page__desc">Don't get sad. Check out something else from us!</p>
+                <a href="#" class="error-page__link btn-gradient">
+                    <svg>
+                        <use href="img/icons/icons.svg#image"></use>
+                    </svg>
+                    Men's double breasted houndstooth jackets <span>outfits</span>
+                </a>
             </div>
         </div>
 
