--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906124847">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230906140455">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -12,7 +12,7 @@
 
     <div class="wrapper">
         <header class="header">
-    <div class="header__container container">
+    <div class="header__container2 container2">
         <div class="header__body">
             <a href="#" class="header__logo">
                 <picture>
@@ -58,7 +58,7 @@
 </header>
 
         <div class="breadcrumbs">
-            <div class="breadcrumbs__container container">
+            <div class="breadcrumbs__container2 container2">
                 <div class="breadcrumbs__body">
                     <a href="#" class="breadcrumbs__link">Home</a>
                     <a href="#" class="breadcrumbs__link">Blog</a>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="blog">
-            <div class="blog__container container">
+            <div class="blog__container2 container2">
                 <div class="blog__header header-blog">
                     <h1 class="header-blog__title title1">Dresshub Blog</h1>
                     <p class="header-blog__desc">
@@ -513,7 +513,7 @@
         </div>
 
         <footer class="footer">
-    <div class="footer__container container">
+    <div class="footer__container2 container2">
         <div class="footer__body">
             <a href="#" class="footer__logo logo">
                 <picture>
@@ -560,7 +560,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230906124847"></script>
+    <script src="js/app.min.js?_v=20230906140455"></script>
 </body>
 
 </html>
