--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906124847">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230906140455">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -12,7 +12,7 @@
 
     <div class="wrapper">
         <header class="header">
-    <div class="header__container container">
+    <div class="header__container2 container2">
         <div class="header__body">
             <a href="#" class="header__logo">
                 <picture>
@@ -77,7 +77,7 @@
         </div>
 
         <footer class="footer">
-    <div class="footer__container container">
+    <div class="footer__container2 container2">
         <div class="footer__body">
             <a href="#" class="footer__logo logo">
                 <picture>
@@ -124,7 +124,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230906124847"></script>
+    <script src="js/app.min.js?_v=20230906140455"></script>
 </body>
 
 </html>
