--- a/look.html
+++ b/look.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906124847">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230906140455">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -12,7 +12,7 @@
 
     <div class="wrapper">
         <header class="header">
-    <div class="header__container container">
+    <div class="header__container2 container2">
         <div class="header__body">
             <a href="#" class="header__logo">
                 <picture>
@@ -58,7 +58,7 @@
 </header>
 
         <div class="breadcrumbs">
-            <div class="breadcrumbs__container container">
+            <div class="breadcrumbs__container2 container2">
                 <div class="breadcrumbs__body">
                     <a href="#" class="breadcrumbs__link">Home</a>
                     <a href="#" class="breadcrumbs__link">Looks</a>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="look">
-            <div class="look__container container">
+            <div class="look__container2 container2">
                 <div class="look__body">
                     <div class="look__main">
                         <div class="look__block">
@@ -4216,7 +4216,7 @@
         </div>
 
         <footer class="footer">
-    <div class="footer__container container">
+    <div class="footer__container2 container2">
         <div class="footer__body">
             <a href="#" class="footer__logo logo">
                 <picture>
@@ -4263,7 +4263,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230906124847"></script>
+    <script src="js/app.min.js?_v=20230906140455"></script>
 </body>
 
 </html>
