--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906140455">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230907150254">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -84,9 +84,16 @@
                             Thank you for visiting DressHub! We’d love to hear from you. Please fill out the form below,
                             and a member of our team will get back to you as soon as possible.
                         </p>
-                        <input type="text" placeholder="Name" name="name">
-                        <input type="text" placeholder="E-mail" name="email">
-                        <input type="text" placeholder="Title" name="title">
+
+                        <div class="contact__input input">
+                            <input type="text" placeholder="Name" name="name">
+                        </div>
+                        <div class="contact__input input">
+                            <input type="text" placeholder="E-mail" name="email">
+                        </div>
+                        <div class="contact__input input">
+                            <input type="text" placeholder="Title" name="title">
+                        </div>
                         <textarea placeholder="Message" name="message"></textarea>
                         <button class="contact__btn btn-gradient" type="submit">Submit</button>
                         <div class="contact__footer">
@@ -146,7 +153,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230906140455"></script>
+    <script src="js/app.min.js?_v=20230907150254"></script>
 </body>
 
 </html>
