--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230906140455">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230907150254">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -35,6 +35,7 @@
     <a href="policy.html">Privacy policy</a>
     <a href="contact.html">Contact</a>
     <a href="error.html">404</a>
+    <a href="account.html">Account</a>
 
 </body>
 
