--- a/login-error.html
+++ b/login-error.html
@@ -658,22 +658,53 @@
     </div>
 </header>
 
-        <div class="error-page">
-            <div class="error-page__body">
-                <div class="error-page__image">
-                    <picture>
-                        <source data-srcset="img/error-page/image.gif" srcset="img/plug.png" type="image/webp">
-                        <img data-src="img/error-page/image.gif" src="img/plug.png" alt="Image">
-                    </picture>
+        <div class="breadcrumbs">
+            <div class="breadcrumbs__container container2">
+                <div class="breadcrumbs__body">
+                    <a href="#" class="breadcrumbs__link">Home</a>
+                    <a href="#" class="breadcrumbs__link">Login</a>
                 </div>
-                <h1 class="error-page__title title3">Ooops! Page not found</h1>
-                <p class="error-page__desc">Don't get sad. Check out something else from us!</p>
-                <a href="#" class="error-page__link btn-gradient">
-                    <svg>
-                        <use href="img/icons/icons.svg#image"></use>
-                    </svg>
-                    Men's double breasted houndstooth jackets <span>outfits</span>
-                </a>
+            </div>
+        </div>
+
+        <div class="login">
+            <div class="login__container container2">
+                <div class="login__body">
+                    <form action="#" class="login__form error">
+                        <h1 class="login__title title1">Login</h1>
+                        <div class="login__intro">
+                            Don't have an account? <a href="#" class="login__link">Sign up</a>
+                        </div>
+                        <div class="login__input input error">
+                            <input type="text" placeholder="E-mail">
+                        </div>
+                        <div class="login__input input error">
+                            <input type="password" placeholder="Password">
+                            <a href="#" class="login__link">Forgot password?</a>
+                        </div>
+                        <div class="login__error">
+                            The email address or password is incorrect.
+                        </div>
+                        <button type="button" class="login__btn btn-gradient">Login</button>
+                        <div class="login__or">
+                            <span>Or log in with</span>
+                        </div>
+                        <a href="#" class="login__social btn-blue">
+                            <picture>
+                                <source data-srcset="img/icons/facebook.svg" srcset="img/plug.png" type="image/webp">
+                                <img data-src="img/icons/facebook.svg" src="img/plug.png" alt="Image">
+                            </picture>
+                            Sing in with Facebook
+                        </a>
+                        <a href="#" class="login__social btn-white">
+                            <picture>
+                                <source data-srcset="img/icons/google.svg" srcset="img/plug.png" type="image/webp">
+                                <img data-src="img/icons/google.svg" src="img/plug.png" alt="Image">
+                            </picture>
+                            Sing in with Google
+                        </a>
+                    </form>
+                </div>
             </div>
         </div>
 
