--- a/reset.html
+++ b/reset.html
@@ -658,22 +658,31 @@
     </div>
 </header>
 
-        <div class="error-page">
-            <div class="error-page__body">
-                <div class="error-page__image">
-                    <picture>
-                        <source data-srcset="img/error-page/image.gif" srcset="img/plug.png" type="image/webp">
-                        <img data-src="img/error-page/image.gif" src="img/plug.png" alt="Image">
-                    </picture>
+        <div class="breadcrumbs">
+            <div class="breadcrumbs__container container2">
+                <div class="breadcrumbs__body">
+                    <a href="#" class="breadcrumbs__link">Home</a>
+                    <a href="#" class="breadcrumbs__link">Reset password</a>
                 </div>
-                <h1 class="error-page__title title3">Ooops! Page not found</h1>
-                <p class="error-page__desc">Don't get sad. Check out something else from us!</p>
-                <a href="#" class="error-page__link btn-gradient">
-                    <svg>
-                        <use href="img/icons/icons.svg#image"></use>
-                    </svg>
-                    Men's double breasted houndstooth jackets <span>outfits</span>
-                </a>
+            </div>
+        </div>
+
+        <div class="reset">
+            <div class="reset__container container2">
+                <div class="reset__body">
+                    <form action="#" class="reset__form">
+                        <h1 class="reset__title title1">Reset password</h1>
+                        <div class="reset__input input">
+                            <input type="text" placeholder="E-mail">
+                        </div>
+                        <button type="submit" class="reset__btn btn-gradient">
+                            Submit
+                        </button>
+                        <button type="submit" class="reset__btn btn-white">
+                            Cancel
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
 
