--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230907150254">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230911154401">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -27,6 +27,7 @@
 
     <a href="index.html">Main</a>
     <a href="product.html">Product</a>
+    <a href="category.html">Category</a>
     <a href="looks.html">Looks</a>
     <a href="look.html">One look</a>
     <a href="brands.html">Brands</a>
@@ -36,6 +37,9 @@
     <a href="contact.html">Contact</a>
     <a href="error.html">404</a>
     <a href="account.html">Account</a>
+    <a href="login.html">Login</a>
+    <a href="login-error.html">Login error</a>
+    <a href="reset.html">Reset password</a>
 
 </body>
 
