--- a/look.html
+++ b/look.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230911154401">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230915155708">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -765,36 +765,50 @@
                                             </svg>
                                         </a>
                                     </div>
+                                    <div class="look__slide swiper-slide">
+                                        <a href="#" class="look__card">
+                                            <picture>
+                                                <source data-srcset="img/looks/image1.webp" srcset="img/plug.png"
+                                                    type="image/webp">
+                                                <img data-src="img/looks/image1.png" src="img/plug.png" alt="Image">
+                                            </picture>
+                                            <svg>
+                                                <use href="img/icons/icons.svg#arrow"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                    <div class="look__slide swiper-slide">
+                                        <a href="#" class="look__card">
+                                            <picture>
+                                                <source data-srcset="img/looks/image2.webp" srcset="img/plug.png"
+                                                    type="image/webp">
+                                                <img data-src="img/looks/image2.png" src="img/plug.png" alt="Image">
+                                            </picture>
+                                            <svg>
+                                                <use href="img/icons/icons.svg#arrow"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
+                                    <div class="look__slide swiper-slide">
+                                        <a href="#" class="look__card">
+                                            <picture>
+                                                <source data-srcset="img/looks/image3.webp" srcset="img/plug.png"
+                                                    type="image/webp">
+                                                <img data-src="img/looks/image3.png" src="img/plug.png" alt="Image">
+                                            </picture>
+                                            <svg>
+                                                <use href="img/icons/icons.svg#arrow"></use>
+                                            </svg>
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="look__modes">
-                        <div class="look__view">Kind of view</div>
-                        <div class="look__mode mode">
-                            <div class="mode__body">
-                                <button type="button" class="mode__btn">
-                                    <svg>
-                                        <use href="img/icons/icons.svg#mode2"></use>
-                                    </svg>
-                                </button>
-                                <button type="button" class="mode__btn">
-                                    <svg>
-                                        <use href="img/icons/icons.svg#mode3"></use>
-                                    </svg>
-                                </button>
-                                <button type="button" class="mode__btn active">
-                                    <svg>
-                                        <use href="img/icons/icons.svg#mode4"></use>
-                                    </svg>
-                                </button>
                             </div>
                         </div>
                     </div>
                     <div class="look__goods goods-looks">
                         <div class="goods-looks__body">
                             <div class="goods-looks__header">
-                                <h2 class="goods-looks__title title1">Grey Cardigan</h2>
+                                <div class="goods-looks__title title2">Grey Cardigan</div>
                                 <a href="#" class="goods-looks__link btn-gradient">
                                     <svg>
                                         <use href="img/icons/icons.svg#image"></use>
@@ -4864,7 +4878,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230911154401"></script>
+    <script src="js/app.min.js?_v=20230915155708"></script>
 </body>
 
 </html>
