--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230911154401">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230915155708">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -680,22 +680,53 @@
                         </picture>
                     </div>
                     <form action="#" class="contact__form">
-                        <h1 class="contact__form-title title1">Please feel free to contact us</h1>
+                        <div class="contact__form-title title1">Please feel free to contact us</div>
                         <p class="contact__desc">
                             Thank you for visiting DressHub! We’d love to hear from you. Please fill out the form below,
                             and a member of our team will get back to you as soon as possible.
                         </p>
-
-                        <div class="contact__input input">
+                        <div class="contact__input input limit" data-limit="30">
                             <input type="text" placeholder="Name" name="name">
+                            <div class="input__warning warning-input help">
+                                <button type="button" class="help__btn">
+                                    <svg>
+                                        <use href="img/icons/icons.svg#attention"></use>
+                                    </svg>
+                                </button>
+                                <div class="help__message">Too few</div>
+                            </div>
                         </div>
-                        <div class="contact__input input">
+                        <div class="contact__input input email limit" data-limit="30">
                             <input type="text" placeholder="E-mail" name="email">
+                            <div class="input__warning warning-input help">
+                                <button type="button" class="help__btn">
+                                    <svg>
+                                        <use href="img/icons/icons.svg#attention"></use>
+                                    </svg>
+                                </button>
+                                <div class="help__message">Too few</div>
+                            </div>
+                            <div class="input__error error-input help">
+                                <button type="button" class="help__btn">
+                                    <svg>
+                                        <use href="img/icons/icons.svg#question"></use>
+                                    </svg>
+                                </button>
+                                <div class="help__message">Please, enter valid email address.</div>
+                            </div>
                         </div>
-                        <div class="contact__input input">
+                        <div class="contact__input input limit" data-limit="40">
                             <input type="text" placeholder="Title" name="title">
+                            <div class="input__warning warning-input help">
+                                <button type="button" class="help__btn">
+                                    <svg>
+                                        <use href="img/icons/icons.svg#attention"></use>
+                                    </svg>
+                                </button>
+                                <div class="help__message">Too few</div>
+                            </div>
                         </div>
-                        <textarea placeholder="Message" name="message"></textarea>
+                        <textarea class="limit" placeholder="Message" name="message" data-limit="1000"></textarea>
                         <button class="contact__btn btn-gradient" type="submit">Submit</button>
                         <div class="contact__footer">
                             <span>Or just email us</span>
@@ -754,7 +785,7 @@
     </div>
 
     
-    <script src="js/app.min.js?_v=20230911154401"></script>
+    <script src="js/app.min.js?_v=20230915155708"></script>
 </body>
 
 </html>
